--- a/lessons.css
+++ b/lessons.css
@@ -9,7 +9,7 @@ header {
 
 .main-content {
     background-image: url(images/background.png);
-    margin: 0px 400px;
+    margin: 0px 20%;
     margin-bottom: 50px;
     padding: 40px 10px;
     border-radius: 5px;
