--- a/lesson.css
+++ b/lesson.css
@@ -17,10 +17,14 @@ header {
 
 .main-content {
     background-color: rgb(26, 26, 26);
-    margin: 0px 400px;
+    margin: 0px 20%;
     padding: 5px 25px;
     border-radius: 5px;
-    border: 1px solid rgb(48, 48, 48)
+    border: 1px solid rgb(48, 48, 48);
+}
+
+img {
+    width: 50%;
 }
 
 .lesson-content p {
